@@ -36,10 +36,10 @@ main(void)
         return 1;
     }
 
-    assert(Duro_init_interp(&interp, &ec, RDB_db_name(dbp)) == RDB_OK);
+    assert(Duro_init_interp(&interp, &ec, RDB_db_env(dbp),
+            RDB_db_name(dbp)) == RDB_OK);
 
-    if (Duro_dt_execute_str(RDB_db_env(dbp),
-            "put_line ('Test');"
+    if (Duro_dt_execute_str("put_line ('Test');"
             "begin tx;"
             "put_line (cast_as_string(count(depts)));"
             "commit;",
